# stock-project

./: .env.template  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  add_columns.py  check_notion.py  docker-compose.yml  main-guide.md  pyproject.toml  run_locust_test.sh  test_async_gemini.py  test_gemini2.py  update_notion_schema.py  update_notion_user.py
.codex/: config.toml
.githooks/: pre-push  prepare-commit-msg
.github/: pull_request_template.md
.local/: CODEX_GUIDE.md  DEPENDENCY_MAP.md  HANDOVER.md
done/: 01_API_Key_Guide.md  02_Data_Collection_Design.md  03_Report_Format_Design.md  03_notification_channel_review.md  04_Next_Steps.md  05_community_parsing.md  06_error_webhook.md  07_daily_logging.md  08_task_history.md  completed_work_report.md  e2e_incident_execution_report.md  e2e_incident_response_plan.md  github_actions_gemini_404_execution_report.md  operations_runbook.md  phase6_task.md
errorCase/: 2026-03-04_gemini_reddit_errors.md
logging/: 2026-03-02.md  2026-03-04.md  2026-03-07.md
requirements/: 01_initial_analysis.md  02_detailed_requirements.md  03_architecture_and_ai_solution.md  04_phase6_optimization_requirements.md
scripts/: README.md  check_changed_python_lint.sh  check_commit_size.sh  check_context_sync.sh  check_git_hygiene.sh  check_review_policy.sh  check_runtime_state.py  provision_prompt_db.py  run_quality_gate.sh  session_bootstrap.sh  test_db.py  test_gemini.py  test_notion.py  update_notion_db.py
src/: alert_daemon.py  main.py  models.py
task/: agents_md_optimization_plan.md  completed_work_report.md  (+41 more)
(+91 files in other folders)
